--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,22 @@
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
+/ui/node_modules
+data
+*.idea
+*.code
+objectengine/logs/*
+
+*.orm
+*.db
+
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binary, built with `go demo -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
@@ -19,7 +28,5 @@
 
 # Go workspace file
 go.work
-go.work.sum
-
-# env file
-.env
+app-amd64
+app-armv7
