--- a/modules/bios/config/config.yaml
+++ b/modules/bios/config/config.yaml
@@ -1,12 +1,16 @@
 id: "abc"
 description: "rubix-bios"
 nats_url: "nats://localhost:4222"
-proxy_port: 4223
+proxy_port: 4222
 root_path: "/ros"
 apps_path: "apps"
 system_path: ""
 git_token: ""
 git_download_path: "/ros/apps/library"
+
+jet_stream:
+  store_enable: true
+  store_name: "bios"
 
 services:
   - ufw
