--- a/modules/bios/config/config.yaml
+++ b/modules/bios/config/config.yaml
@@ -1,4 +1,4 @@
-id: "abc"
+id: "bios"
 description: "rubix-bios"
 nats_url: "nats://localhost:4222"
 proxy_port: 4222
@@ -7,6 +7,10 @@ apps_path: "apps"
 system_path: ""
 git_token: ""
 git_download_path: "/ros/apps/library"
+
+web_server:
+  enable: true
+  port: 5000
 
 jet_stream:
   store_enable: true
